# walmart_demo

./: .gitignore  main.py  pyproject.toml
demo_walmart/api/: db.py  llm.py  main.py
demo_walmart/api/static/: catalog.json  semantic_manifest.json
demo_walmart/database/: docker-compose.yml  init.sql
demo_walmart/frontend/: main.py
demo_walmart/mcp/: Dockerfile
demo_walmart/mcp/.dbt/: .user.yml  profiles.yml
demo_walmart/pipeline/: explore.ipynb  main.py  utils.py
demo_walmart/vs_demo_walmart/: dbt_project.yml
demo_walmart/vs_demo_walmart/models/silver/: monthly_store_sales.sql  rolling_3mo_avg_per_store.sql  store_contrib.sql  store_rank_mo_sales.sql  trend_growth.sql  year_over_year_growth.sql  yearly_store_sales.sql  ytd_cumulative_sales.sql
demo_walmart/vs_demo_walmart/models/silver/semantic_models/: monthly_store_sales.yaml
